{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 53,
  "lineage": "fa840edd-9c9b-0af1-5d16-a9d7ad2a13c9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vedant_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:414691912957:internet-gateway/igw-059e54b6ca930d3fe",
            "id": "igw-059e54b6ca930d3fe",
            "owner_id": "414691912957",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "vedant-igw"
            },
            "tags_all": {
              "Name": "vedant-igw"
            },
            "vpc_id": "vpc-08bb09a1a10ddb481"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vedant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vedant_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:414691912957:route-table/rtb-0aa9c0fbc5a49e9f3",
            "id": "rtb-0aa9c0fbc5a49e9f3",
            "owner_id": "414691912957",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059e54b6ca930d3fe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vedant-route-table"
            },
            "tags_all": {
              "Name": "vedant-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bb09a1a10ddb481"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414691912957",
            "id": "rtb-0aa9c0fbc5a49e9f3",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_internet_gateway.vedant_igw",
            "aws_vpc.vedant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vedant_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0dd2561b1db667e",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0aa9c0fbc5a49e9f3",
            "subnet_id": "subnet-06883a2e3837b1f34"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vedant_igw",
            "aws_route_table.vedant_route_table",
            "aws_subnet.vedant_subnet",
            "aws_vpc.vedant_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b167e11f6a5a57a2",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0aa9c0fbc5a49e9f3",
            "subnet_id": "subnet-0ca5244ded15476d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vedant_igw",
            "aws_route_table.vedant_route_table",
            "aws_subnet.vedant_subnet",
            "aws_vpc.vedant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vedant_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:414691912957:security-group/sg-08f38f7809b5b254a",
            "description": "Cluster control-plane SG - egress open",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f38f7809b5b254a",
            "ingress": [],
            "name": "vedant-cluster-sg",
            "name_prefix": "",
            "owner_id": "414691912957",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vedant-cluster-sg"
            },
            "tags_all": {
              "Name": "vedant-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bb09a1a10ddb481"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414691912957",
            "id": "sg-08f38f7809b5b254a",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.vedant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vedant_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:414691912957:security-group/sg-0296516b4f842d648",
            "description": "Node group SG - all traffic (adjust for production)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0296516b4f842d648",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "vedant-node-sg",
            "name_prefix": "",
            "owner_id": "414691912957",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vedant-node-sg"
            },
            "tags_all": {
              "Name": "vedant-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08bb09a1a10ddb481"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414691912957",
            "id": "sg-0296516b4f842d648",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.vedant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vedant_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:414691912957:subnet/subnet-06883a2e3837b1f34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06883a2e3837b1f34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414691912957",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "vedant-subnet-0"
            },
            "tags_all": {
              "Name": "vedant-subnet-0"
            },
            "vpc_id": "vpc-08bb09a1a10ddb481"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414691912957",
            "id": "subnet-06883a2e3837b1f34",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.vedant_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:414691912957:subnet/subnet-0ca5244ded15476d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca5244ded15476d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "414691912957",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "vedant-subnet-1"
            },
            "tags_all": {
              "Name": "vedant-subnet-1"
            },
            "vpc_id": "vpc-08bb09a1a10ddb481"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "414691912957",
            "id": "subnet-0ca5244ded15476d0",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_vpc.vedant_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vedant_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:414691912957:vpc/vpc-08bb09a1a10ddb481",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b0b193afa6fb367",
            "default_route_table_id": "rtb-0915e2fdef4ba2ec8",
            "default_security_group_id": "sg-0773ee8a1ab776ce1",
            "dhcp_options_id": "dopt-04e7e0b0ebbbef231",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08bb09a1a10ddb481",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0915e2fdef4ba2ec8",
            "owner_id": "414691912957",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "vedant-vpc"
            },
            "tags_all": {
              "Name": "vedant-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}